# finance

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yaml  multi_symbol.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notes/: APIs.md  Bitcoin Node.md  Features Planning.md  Indicator tips.md  Investing Notes.md  getting_started.md  investing_notes.md
notes/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  note-composer.json  workspace  workspaces.json
notes/.obsidian/snippets/: obsidian.css  obsidian.newer-old.css  obsidian.old.css
src/: add_adapter.py  add_chain_adapter.py  aggregator.py  alert.py  discounted_cash_flow.py  finance.py  finance_test.py  intrinsic_value.py  main.py  matrix.py  ml_predictor.py  ml_trainer.py  multi_symbol.py  order.py  single_symbol.py  symbol.py  test.py  trend.py  unit_test.py
src/main/adapters/: adapter.py  adapterCollection.py  adapter_collection.py  alpaca.py  alpha_vantage.py  argument.py  binance.py  bitcoin.py  coinbase_pro.py  converter.py  financial_modeling_prep.py  iex_cloud.py  kraken.py  quandl.py  robinhood.py  sec.py  td_ameritrade.py  (+3 more)
src/test/: adapterTests.py  adapter_tests.py  addAdapter.py  add_adapter.py  executor_test.py  guiTests.py  gui_tests.py  portfolioTests.py  portfolio_tests.py  runner_test.py  srcTests.py  src_tests.py  strategyTests.py  strategy_tests.py  testExecutor.py  testUtils.py  test_graph.py  test_intrinsic_value_runner.py  testing_utils.py  tests.py  utils_test.py
web/public/: index.html
(+159 files in other folders)
